# rust-chat

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: chat.rs  chat.rs.html  main.rs
frontend/: Cargo.toml  index.html
frontend/assets/: style.scss  variables.scss
frontend/src/: apiclient.rs  inputbox.rs  main.rs  messages.rs  sse.rs
