[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}
web-sys = { version = "0.3", features = ["EventSource"]}
log = "0.4.6"
wasm-logger = "0.2.0"
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen-futures = "0.4.29"
#wasm-bindgen-futures = { version = "0.3.20", features = ["futures_0_3"] }
